Featured Tea HTML & CSS

--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -9,7 +9,7 @@ body {
   text-align: center;
 }
 
-/* Header */
+/* Header Section */
 
 header {
   display: flex;
@@ -19,6 +19,7 @@ header {
   height: 69px;
   width: 100%;
   border-bottom: 1px solid seashell;
+  background-color: black;
 }
 
 .logo {
@@ -38,11 +39,13 @@ header nav a {
 }
 
 
-/* Content Secion */
+/* Content Section */
 
 .content {
   display: flex;
-  width: 1200px;
+  flex-direction: column;
+  align-items: center;
+  width: 1000px;
   margin: 0 auto 0 auto;
   padding-top: 70px;
 }
@@ -64,3 +67,28 @@ header nav a {
   width: 1200px;
 
 }
+
+/* Featured Tea Section */
+
+.tea-types img{
+  height: 200px;
+  width: 300px;
+}
+
+.tea-types h4{
+  margin-top: 10px;
+}
+
+.tea-types {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+
+
+
+
+/*Locations Section */
+
+/*Footer Section */
