--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -16,7 +16,7 @@ header {
   align-items: center;
   position: fixed;
   z-index: 1;
-  height: 69px;
+  height: 70px;
   width: 100%;
   border-bottom: 1px solid seashell;
   background-color: black;
@@ -53,7 +53,7 @@ header nav a {
 
 /* Mission Section */
 
-.mission {
+#mission {
   background-image: url("../../Resources/Images/img-mission-background.jpg");
   display: flex;
   align-items: center;
@@ -62,7 +62,7 @@ header nav a {
   width: 1200px;
 }
 
-.mission .text-content {
+#mission .text-content {
   background-color: black;
   width: 1200px;
 
@@ -73,6 +73,7 @@ header nav a {
 .tea-types img{
   height: 200px;
   width: 300px;
+  margin: 16px;
 }
 
 .tea-types h4{
@@ -82,8 +83,9 @@ header nav a {
 .tea-types {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: center;
 }
+
 
 
 
